Ability to add or remove colors from a color set (any number of colors is now possible).

--- a/components/ColorEdit.mxml
+++ b/components/ColorEdit.mxml
@@ -40,7 +40,14 @@
 					writeCollection.addItem({name:setName.text,data:new ArrayCollection(tempArray)});
 					this.visible = false;
 				}
-				
+			}
+			
+			private function addColor():void {
+				_colorSet.addItem(0);
+			}
+			
+			private function removeColor():void {
+				_colorSet.removeItemAt(_colorSet.length-1);
 			}
 		]]>
 	</mx:Script>
@@ -57,6 +64,10 @@
 		<mx:Repeater id="colorRow" dataProvider="{_colorSet}" recycleChildren="true">
 			<components:SingleColor id="colorBox" colorVal="{colorRow.currentItem as uint}"/>
 		</mx:Repeater>
+		<mx:VBox>
+			<mx:Button label="+" click="addColor()" toolTip="Add New Color"/>
+			<mx:Button label="-" click="removeColor()" toolTip="Remove Last Color"/>
+		</mx:VBox>
 	</mx:HBox>
 	<mx:HBox width="100%" horizontalAlign="right">
 		<mx:Button label="Ok" click="saveColor()"/>
