--- a/components/ColorEdit.mxml
+++ b/components/ColorEdit.mxml
@@ -53,7 +53,11 @@
 			private function updateColor(evt:Event):void {
 				var tempArray:Array = new Array();
 				
-				//read through colors and set up a new collection?
+				for(var i:int = 0; i< colorBox.length; i++) {
+					tempArray.push(colorBox[i].colorVal);
+				}
+				
+				_colorSet = new ArrayCollection(tempArray);
 			}
 		]]>
 	</mx:Script>
