Added a color picker component, just double click on a single color to edit it with the color picker.

--- a/components/ColorEdit.mxml
+++ b/components/ColorEdit.mxml
@@ -2,11 +2,14 @@
 <mx:Panel xmlns:mx="http://www.adobe.com/2006/mxml" layout="vertical" title="Color Editor" xmlns:filters="flash.filters.*" xmlns:components="components.*">
 	<mx:Script>
 		<![CDATA[
+			import mx.managers.PopUpManager;
 			import com.sophware.Util;
 			import mx.events.PropertyChangeEvent;
 			import mx.collections.ArrayCollection;
 			
 			private var _colorObject:Object;
+			private var browserWindow:ColorHandler;
+			private var editSingle:SingleColor;
 			public var editing:Boolean;
 			[Bindable] private var _colorSet:ArrayCollection;
 			[Bindable] private var _setName:String;
@@ -59,6 +62,20 @@
 				
 				_colorSet = new ArrayCollection(tempArray);
 			}
+			
+			private function showBrowser(evt:MouseEvent):void {
+				editSingle = evt.target.parent as SingleColor;
+				browserWindow = PopUpManager.createPopUp(this,ColorHandler,true) as ColorHandler;
+				PopUpManager.centerPopUp(browserWindow);
+				browserWindow.colorSample.colorVal = editSingle.colorVal;
+				browserWindow.okbutton.addEventListener(MouseEvent.CLICK,handlerClick);
+			}
+			
+			public function handlerClick(evt:MouseEvent):void {
+				editSingle.colorVal = browserWindow.colorSample.colorVal;
+				PopUpManager.removePopUp(browserWindow);
+				updateColor(evt);
+			}
 		]]>
 	</mx:Script>
 	
@@ -73,7 +90,7 @@
 	<mx:HBox verticalAlign="top">
 		<mx:Tile width="350">
 			<mx:Repeater id="colorRow" dataProvider="{_colorSet}" recycleChildren="true">
-				<components:SingleColor id="colorBox" colorVal="{colorRow.currentItem as uint}" colorChange="updateColor(event)"/>
+				<components:SingleColor id="colorBox" colorVal="{colorRow.currentItem as uint}" colorChange="updateColor(event)" doubleClickEnabled="true" doubleClick="showBrowser(event)"/>
 			</mx:Repeater>
 		</mx:Tile>
 		<mx:VBox>
