A couple of small tweaks before uploading the 0.65 build.

--- a/css/colorswatch.css
+++ b/css/colorswatch.css
@@ -58,6 +58,7 @@ TitleWindow {
 	backgroundAlpha:		1;
 	borderColor:			#333333;
 	borderAlpha:			1;
+	modal-transparency-color:#333333;
 }
 
 ToolTip {
